--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/uikit@3.3.1/dist/css/uikit.min.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eray Gündoğmuş</title>
@@ -14,7 +15,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-    <script src="three.min.js"></script>
     <script>
       let scene, camera, renderer, stars, starGeo
 
