feat: refactor three.js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-    <script src="3d.js"></script>
+    <script type="module" src="3d.js"></script>
   </body>
 </html>
