--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
           starGeo.vertices.push(star)
         }
 
-        let sprite = new THREE.TextureLoader().load('public/star.png')
+        let sprite = new THREE.TextureLoader().load('star.png')
         let starMaterial = new THREE.PointsMaterial({
           color: 0xaaaaaa,
           size: 0.55,
