--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <title>Eray Gündoğmuş</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="vite"></div>
     <script type="module" src="/src/main.ts"></script>
     <script>
       let scene, camera, renderer, stars, starGeo
