feat: add meta tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Eray Gündoğmuş's Website, Blog and Bookmarks"
+    />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, Frontend, Eray, Gündoğmuş, Yazılım, Programlama"
+    />
+    <meta name="author" content="Eray Gündoğmuş" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
     <link
       rel="stylesheet"
@@ -9,7 +19,6 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eray Gündoğmuş</title>
   </head>
   <body>
